instantcard/k8s/serviciomtls.yaml
apiVersion: v1
kind: Service
metadata:
  name: s-$(name)
  namespace: $(nsmtls)
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  labels:
    app: $(name)-d
spec:
  type: LoadBalancer
  selector:
    app: $(name)-d
  ports:
  - name: service-port-internal
    port: 8081
    targetPort: 8081
