instantcard/k8s/virtualServicemtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: $(name)-vs-internal
  namespace: $(nsmtls)
spec:
  hosts:
  - "*"
  gateways:
  - $(name)-internal-gateway
  http:
  - match:
    - queryParams:
        scope:
          exact: $(api.suffix)
      uri:
        regex: ^((\/)(.*))$
    route:
    - destination:
        host: s-$(name).$(nsmtls).svc.cluster.local
        port:
          number: 8081
